# powerdiagrams

./: .hgignore  CMakeLists.txt  Makefile
cmake/: FindQhull.cmake
doc/: powerdiagrams.pseudo.py
examples/: broken_sites.csv  four_sites.csv  garage_sites.csv  grid_sites.csv  headache_sites.csv  outside_gamma.csv  outside_sites.csv  pd_bsp_2dCells_gamma.csv  pd_bsp_2dCells_sites.csv  pd_bsp_2dCells_small_gamma.csv  pd_bsp_2dCells_small_sites.csv  pd_bsp_3dCells_gamma.csv  pd_bsp_3dCells_sites.csv  pd_bsp_3dCells_small_gamma.csv  pd_bsp_3dCells_small_sites.csv  pd_bsp_letters_gamma.csv  pd_bsp_letters_sites.csv  pd_bsp_wine_gamma.csv  pd_bsp_wine_sites.csv  simple_gamma.csv  simple_sites.csv  three_gamma.csv  three_sites.csv  voronoi_sites.csv
include/: BidirectionalGraph.h  ConvexHullAlgorithm.h  ConvexHullQhull.h  FromCSV.h  IncidenceLattice.h  PowerDiagram.h
src/: AllChoices.hpp  BidirectionalGraph.h  BidirectionalGraph.hpp  ConvexHullAlgorithm.hpp  ConvexHullQhull.cpp  ConvexHullQhull.hpp  FromCSV.cpp  IncidenceLattice.hpp  Main.cpp  PowerDiagram.cpp  PowerDiagram.h  PowerDiagram.hpp  PowerDiagramDual.cpp  PowerDiagramDual.hpp  PowerDiagramNaive.cpp  PowerDiagramNaive.hpp  PowerDiagrams.cpp  powerdiagram_main.cpp
src/powerdiagram/: AllChoices.hpp  BidirectionalGraph.hpp  ConvexHullAlgorithm.hpp  ConvexHullQhull.cpp  ConvexHullQhull.hpp  FromCSV.cpp  FromCSV.hpp  IncidenceLattice.hpp  PowerDiagram.hpp  PowerDiagramDual.cpp  PowerDiagramDual.hpp  PowerDiagramNaive.cpp
util/: parseDraw.py  template.tex  tikz.py
